Fixing CSS bug causing scrollbars with videos

--- a/style.scss
+++ b/style.scss
@@ -364,6 +364,11 @@ body .wp-caption {
 	margin: 0.4em auto 0;
 }
 
+.wp-video {
+	margin-top: 1em;
+	margin-bottom: 1em;
+}
+
 /* =Post contents
 -------------------------------------------------------------- */
 
